@startuml

interface Ticket {
    +register()
    +notify()
}

class BillingTicket
class TechnicalTicket
class PlanningTicket

abstract class TicketFactory {
    +createTicket(): Ticket
}

class BillingTicketFactory
class TechnicalTicketFactory
class PlanningTicketFactory

BillingTicket ..|> Ticket
TechnicalTicket ..|> Ticket
PlanningTicket ..|> Ticket

TicketFactory <|-- BillingTicketFactory
TicketFactory <|-- TechnicalTicketFactory
TicketFactory <|-- PlanningTicketFactory

BillingTicketFactory --> BillingTicket
TechnicalTicketFactory --> TechnicalTicket
PlanningTicketFactory --> PlanningTicket
@enduml